fixed vertical scrollbar

--- a/Style/style.css
+++ b/Style/style.css
@@ -27,7 +27,7 @@ p {
     position: absolute;
     top: 250px;
     bottom: 0;
-    width: 100%;
+    width: 99%;
 
 }
 
